2011-10-20  Frank Siegert  <frank.siegert@cern.ch>
	* Extend API of W/ZFinder to allow for specification of input final
	state in which to search for leptons/photons.

2011-10-19  Andy Buckley  <andy@insectnation.org>

	* Adding new version of LHCB_2010_S8758301, based on submission
	from Alex Grecu. There is some slightly dodgy-looking GenParticle*
	fiddling going on, but apparently it's necessary (and hopefully robust).

2011-10-17  Andy Buckley  <andy@insectnation.org>

	* bin/rivet-nopy linker line tweak to make compilation work with
	GCC 4.6 (-lHepMC has to be explicitly added for some reason).

2011-10-13  Frank Siegert  <frank.siegert@cern.ch>

	* Add four CMS QCD analyses kindly provided by CMS.

2011-10-12  Andy Buckley  <andy@insectnation.org>

	* Adding a separate test program for non-matrix/vector math
	functions, and adding a new set of int/float literal arg tests for
	the inRange functions in it.

	* Adding a jet multiplicity plot for jets with pT > 30 GeV to
	MC_TTBAR.

2011-10-11  James Monk    <jmonk@cern.ch>

	* root2flat was missing the first bin (plus spurious last bin)

	* My version of bash does not understand the pipe syntax |& in rivet-buildplugin

2011-09-30  James Monk    <jmonk@cern.ch>

	* Fix bug in ATLAS_2010_S8817804 that misidentified the akt4 jets
	as akt6

2011-09-29  Andy Buckley  <andy@insectnation.org>

	* Converting FinalStateHCM to a slightly more general
	DISFinalState.

2011-09-26  Andy Buckley  <andy@insectnation.org>

	* Adding a default libname argument to rivet-buildplugin. If the
	first argument doesn't have a .so library suffix, then use
	RivetAnalysis.so as the default.

2011-09-19  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* make-plots: Fixing regex for \physicscoor. Adding "FrameColor"
	option.

2011-09-17  Andy Buckley  <andy@insectnation.org>

	* Improving interactive metadata printout, by not printing
	headings for missing info.

	* Bumping the release number to 1.7.0alpha0, since with these