@@ -23,7 +23,6 @@ dist_pkgdata_DATA = \
   ATLAS_2011_S9126244.plot \
   ATLAS_2011_S9128077.plot \
   ATLAS_2011_S9131140.plot \
-  ATLAS_2011_S9212183.plot \
   ATLAS_2011_I919017.plot  \
   ATLAS_2011_I925932.plot  \
   CDF_1988_S1865951.plot \
